automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -43,8 +43,9 @@
     "]\n",
     "\n",
     "# bytes.fromhex to get all the hashes in binary\n",
-    "hashes = [by]\n",
+    "hashes = [bytes.fromhex(h) for h in hex_hashes]\n",
     "# initialize parent level\n",
+    "parent_le\n",
     "# skip by two: use range(0, len(hashes), 2)\n",
     "    # calculate merkle_parent of i and i+1 hashes\n",
     "    # print the hash's hex\n",
