--- a/index.ipynb
+++ b/index.ipynb
@@ -45,9 +45,11 @@
     "# bytes.fromhex to get all the hashes in binary\n",
     "hashes = [bytes.fromhex(h) for h in hex_hashes]\n",
     "# initialize parent level\n",
-    "parent_le\n",
+    "parent_level = []\n",
     "# skip by two: use range(0, len(hashes), 2)\n",
+    "for i in range(0, len(hashes), 2):\n",
     "    # calculate merkle_parent of i and i+1 hashes\n",
+    "    \n",
     "    # print the hash's hex\n",
     "    # add parent to parent level"
    ]
