automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -27,9 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26906cb2caeb03626102f7606ea332784281d5d20e2b4839fbb3dbb37262dbc1\n",
+      "717a0d17538ff5ad2c020bab38bdcde66e63f3daef88f89095f344918d5d4f96\n",
+      "d20629030c7e48e778c1c837d91ebadc2f2ee319a0a0a461f4a9538b5cae2a69\n"
+     ]
+    }
+   ],
    "source": [
     "from helper import merkle_parent\n",
     "\n",
@@ -53,7 +63,7 @@
     "    # print the hash's hex\n",
     "    print(parent.hex())\n",
     "    # add parent to parent level\n",
-    "    parent_l"
+    "    parent_level.append(parent)"
    ]
   },
   {
