automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -83,7 +83,8 @@
     "    '''Takes a list of binary hashes and returns a list that's half\n",
     "    the length'''\n",
     "    # Exercise 2.2: if the list has exactly 1 element raise an error\n",
-    "    \n",
+    "    if len(hash_list) == 1:\n",
+    "        raise RuntimeErro\n",
     "    # Exercise 2.2: initialize next level\n",
     "    # Exercise 2.2: loop over every pair (use: for i in range(0, len(hash_list), 2))\n",
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
