--- a/index.ipynb
+++ b/index.ipynb
@@ -84,8 +84,9 @@
     "    the length'''\n",
     "    # Exercise 2.2: if the list has exactly 1 element raise an error\n",
     "    if len(hash_list) == 1:\n",
-    "        raise RuntimeErro\n",
+    "        raise RuntimeError\n",
     "    # Exercise 2.2: initialize next level\n",
+    "    parent_level = []\n",
     "    # Exercise 2.2: loop over every pair (use: for i in range(0, len(hash_list), 2))\n",
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
     "        # Exercise 2.2: append parent to parent level\n",
