--- a/index.ipynb
+++ b/index.ipynb
@@ -88,6 +88,7 @@
     "    # Exercise 2.2: initialize next level\n",
     "    parent_level = []\n",
     "    # Exercise 2.2: loop over every pair (use: for i in range(0, len(hash_list), 2))\n",
+    "    for i in range(0, len(hash_list), )\n",
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
     "        # Exercise 2.2: append parent to parent level\n",
     "    # Exercise 2.2: return parent level\n",
