--- a/index.ipynb
+++ b/index.ipynb
@@ -90,8 +90,9 @@
     "    # Exercise 2.2: loop over every pair (use: for i in range(0, len(hash_list), 2))\n",
     "    for i in range(0, len(hash_list), 2):\n",
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
-    "        parent = merkle_parent(hash_list[i])\n",
+    "        parent = merkle_parent(hash_list[i], hash_list[i+1])\n",
     "        # Exercise 2.2: append parent to parent level\n",
+    "        paren\n",
     "    # Exercise 2.2: return parent level\n",
     "    pass"
    ]
