--- a/index.ipynb
+++ b/index.ipynb
@@ -92,9 +92,9 @@
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
     "        parent = merkle_parent(hash_list[i], hash_list[i+1])\n",
     "        # Exercise 2.2: append parent to parent level\n",
-    "        paren\n",
+    "        parent_level.append(parent)\n",
     "    # Exercise 2.2: return parent level\n",
-    "    pass"
+    "    return parent_level\n"
    ]
   },
   {
