--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,7 @@
     "# bytes.fromhex to get all the hashes in binary\n",
     "hashes = [bytes.fromhex(h) for h in hex_hashes]\n",
     "# if the number of hashes is odd, duplicate the last one\n",
-    "\n",
+    "if len(hashes) \n",
     "# initialize parent level\n",
     "# skip by two: use range(0, len(hashes), 2)\n",
     "    # calculate merkle_parent of i and i+1 hashes\n",
