--- a/index.ipynb
+++ b/index.ipynb
@@ -158,8 +158,10 @@
     "# bytes.fromhex to get all the hashes in binary\n",
     "hashes = [bytes.fromhex(h) for h in hex_hashes]\n",
     "# if the number of hashes is odd, duplicate the last one\n",
-    "if len(hashes) \n",
+    "if len(hashes) % 2 == 1:\n",
+    "    hashes.append(hashes[-1])\n",
     "# initialize parent level\n",
+    "p\n",
     "# skip by two: use range(0, len(hashes), 2)\n",
     "    # calculate merkle_parent of i and i+1 hashes\n",
     "    # print the hash's hex\n",
