automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -161,8 +161,9 @@
     "if len(hashes) % 2 == 1:\n",
     "    hashes.append(hashes[-1])\n",
     "# initialize parent level\n",
-    "p\n",
+    "parent_level = []\n",
     "# skip by two: use range(0, len(hashes), 2)\n",
+    "for i in range(0, len(hashes), 2):\n",
     "    # calculate merkle_parent of i and i+1 hashes\n",
     "    # print the hash's hex\n",
     "    # add parent to parent level"
