--- a/index.ipynb
+++ b/index.ipynb
@@ -165,6 +165,7 @@
     "# skip by two: use range(0, len(hashes), 2)\n",
     "for i in range(0, len(hashes), 2):\n",
     "    # calculate merkle_parent of i and i+1 hashes\n",
+    "    parent = merkle_parent(hashes[i], hashes[i+])\n",
     "    # print the hash's hex\n",
     "    # add parent to parent level"
    ]
