automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,9 +165,11 @@
     "# skip by two: use range(0, len(hashes), 2)\n",
     "for i in range(0, len(hashes), 2):\n",
     "    # calculate merkle_parent of i and i+1 hashes\n",
-    "    parent = merkle_parent(hashes[i], hashes[i+])\n",
+    "    parent = merkle_parent(hashes[i], hashes[i+1])\n",
     "    # print the hash's hex\n",
-    "    # add parent to parent level"
+    "    print(parent.hex())\n",
+    "    # add parent to parent level\n",
+    "    p"
    ]
   },
   {
