automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -141,9 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26906cb2caeb03626102f7606ea332784281d5d20e2b4839fbb3dbb37262dbc1\n",
+      "717a0d17538ff5ad2c020bab38bdcde66e63f3daef88f89095f344918d5d4f96\n",
+      "d6c56a5281021a587f5a1e0dd4674bff012c69d960136d96e6d72261d5b696ae\n"
+     ]
+    }
+   ],
    "source": [
     "from helper import merkle_parent\n",
     "\n",
@@ -169,7 +179,7 @@
     "    # print the hash's hex\n",
     "    print(parent.hex())\n",
     "    # add parent to parent level\n",
-    "    p"
+    "    parent_level.append(parent)"
    ]
   },
   {
