--- a/index.ipynb
+++ b/index.ipynb
@@ -201,9 +201,11 @@
     "    '''Takes a list of binary hashes and returns a list that's half\n",
     "    the length.'''\n",
     "    # Exercise 2.2: if the list has exactly 1 element raise an error\n",
-    "    if len(hash_list)\n",
+    "    if len(hash_list) == 1:\n",
+    "        raise RuntimeError\n",
     "    # Exercise 3.2: if the list has an odd number of elements, duplicate the last one\n",
     "    #               and put it at the end so it has an even number of elements\n",
+    "    if len(hash_list)\n",
     "    # Exercise 2.2: initialize next level\n",
     "    # Exercise 2.2: loop over every pair (use: for i in range(0, len(hash_list), 2))\n",
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
