automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -205,8 +205,10 @@
     "        raise RuntimeError\n",
     "    # Exercise 3.2: if the list has an odd number of elements, duplicate the last one\n",
     "    #               and put it at the end so it has an even number of elements\n",
-    "    if len(hash_list)\n",
+    "    if len(hash_list) % 2 == 1:\n",
+    "        hash_list.append(hash_list[-1])\n",
     "    # Exercise 2.2: initialize next level\n",
+    "    \n",
     "    # Exercise 2.2: loop over every pair (use: for i in range(0, len(hash_list), 2))\n",
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
     "        # Exercise 2.2: append parent to parent level\n",
