automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -208,8 +208,9 @@
     "    if len(hash_list) % 2 == 1:\n",
     "        hash_list.append(hash_list[-1])\n",
     "    # Exercise 2.2: initialize next level\n",
-    "    \n",
+    "    parent_level = []\n",
     "    # Exercise 2.2: loop over every pair (use: for i in range(0, len(hash_list), 2))\n",
+    "    for i in range(0, len(h))\n",
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
     "        # Exercise 2.2: append parent to parent level\n",
     "    # Exercise 2.2: return parent level\n",
