--- a/index.ipynb
+++ b/index.ipynb
@@ -210,8 +210,9 @@
     "    # Exercise 2.2: initialize next level\n",
     "    parent_level = []\n",
     "    # Exercise 2.2: loop over every pair (use: for i in range(0, len(hash_list), 2))\n",
-    "    for i in range(0, len(h))\n",
+    "    for i in range(0, len(hash_list), 2):\n",
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
+    "        parent = me\n",
     "        # Exercise 2.2: append parent to parent level\n",
     "    # Exercise 2.2: return parent level\n",
     "    pass"
