--- a/index.ipynb
+++ b/index.ipynb
@@ -214,8 +214,9 @@
     "        # Exercise 2.2: get the merkle parent of i and i+1 hashes\n",
     "        parent = merkle_parent(hash_list[i], hash_list[i+1])\n",
     "        # Exercise 2.2: append parent to parent level\n",
-    "        parent_\n",
+    "        parent_level.append(parent)\n",
     "    # Exercise 2.2: return parent level\n",
+    "    return parent_level\n",
     "    pass"
    ]
   }
